# c-consumer

./: .gitignore  README.md
src/c-consumer/: .coafile  CMakeLists.txt  build.sh  coala-lint.sh  conanfile.txt  main.c  makefile
src/fortify/: install-caf.sh  makefile  strategies.f
src/fortify/mf/: README.md
src/fortify/mf/tcp-client-server/: Makefile  server.f90
src/fortify/mf/tsunami/: Dockerfile
src/fortify/mf/tsunami/src/ch02/: Makefile
src/fortify/mf/tsunami/src/ch03/: Makefile
src/fortify/mf/tsunami/src/ch04/: Makefile
src/fortify/mf/tsunami/src/ch07/: Makefile
src/mixing-example/: all.sh  compile-cppprogram.sh  compile-cprogram.sh  compile-fprogram.sh  cppprogram.cpp  cprogram.c  fprogram.f
src/mixing-example/include/c-library/: cfunction.c  cfunction.h  cfunction_.c
src/mixing-example/include/cpp-library/: cppfunction-extern.cpp  cppfunction-extern.h  cppfunction.cpp  cppfunction.h  cppfunction_.cpp  cppfunction_.h
src/mixing-example/include/f-library/: ffunction.h
